--- a/bookmark-api/src/main/resources/application.properties
+++ b/bookmark-api/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=bookmark-api
+
+# MongoDB Atlas Configuration
+spring.data.mongodb.uri=mongodb+srv://divyansh:cruncyrocks@bookmarkapi.wbarlau.mongodb.net/bookmarkdb?retryWrites=true&w=majority&appName=bookmarkApi
+
+# Server Configuration
+server.port=8080
+
+# Logging
+logging.level.org.springframework.data.mongodb=DEBUG
