--- a/bookmark-api/src/main/resources/application.properties
+++ b/bookmark-api/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=bookmark-api
 
 # MongoDB Atlas Configuration
-spring.data.mongodb.uri=mongodb+srv://divyansh:cruncyrocks@bookmarkapi.wbarlau.mongodb.net/bookmarkdb?retryWrites=true&w=majority&appName=bookmarkApi
+spring.data.mongodb.uri=${MONGODB_URI}
 
 # Server Configuration
 server.port=8080
