--- a/bookmark-api/src/main/resources/application.properties
+++ b/bookmark-api/src/main/resources/application.properties
@@ -2,9 +2,13 @@ spring.application.name=bookmark-api
 
 # MongoDB Atlas Configuration
 spring.data.mongodb.uri=${MONGODB_URI}
+spring.data.mongodb.auto-index-creation=true
+spring.data.mongodb.ssl.enabled=true
+spring.data.mongodb.ssl.invalid-hostname-allowed=true
 
 # Server Configuration
 server.port=8080
 
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
+logging.level.org.mongodb=DEBUG
