--- a/bookmark-api/src/main/resources/application.properties
+++ b/bookmark-api/src/main/resources/application.properties
@@ -12,3 +12,12 @@ server.port=8080
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.mongodb=DEBUG
+
+# Kafka Configuration
+spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.consumer.group-id=bookmark
+spring.kafka.consumer.auto-offset-reset=earliest
+spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+spring.kafka.consumer.value-deserializer=org.apache.kafka.common.serialization.StringDeserializer
+
+
