Dockerized the api

--- a/bookmark-api/src/main/resources/application.properties
+++ b/bookmark-api/src/main/resources/application.properties
@@ -1,10 +1,10 @@
 spring.application.name=bookmark-api
 
-# MongoDB Atlas Configuration
-spring.data.mongodb.uri=${MONGODB_URI}
+# MongoDB Configuration
+spring.data.mongodb.uri=${MONGODB_URI:mongodb://localhost:27017/bookmarks}
 spring.data.mongodb.auto-index-creation=true
-spring.data.mongodb.ssl.enabled=true
-spring.data.mongodb.ssl.invalid-hostname-allowed=true
+spring.data.mongodb.ssl.enabled=${MONGODB_SSL_ENABLED:false}
+spring.data.mongodb.ssl.invalid-hostname-allowed=${MONGODB_SSL_INVALID_HOSTNAME:false}
 
 # Server Configuration
 server.port=8080
@@ -12,9 +12,11 @@ server.port=8080
 # Logging
 logging.level.org.springframework.data.mongodb=DEBUG
 logging.level.org.mongodb=DEBUG
+logging.level.org.springframework.kafka=INFO
+logging.level.org.apache.kafka=INFO
 
 # Kafka Configuration
-spring.kafka.bootstrap-servers=localhost:9092
+spring.kafka.bootstrap-servers=${SPRING_KAFKA_BOOTSTRAP_SERVERS:localhost:9092}
 spring.kafka.consumer.group-id=bookmark
 spring.kafka.consumer.auto-offset-reset=earliest
 spring.kafka.consumer.key-deserializer=org.apache.kafka.common.serialization.StringDeserializer
